<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".ui.SignupFragment"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/fragment_signup_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/fragment_signup_edit_username_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/fragment_signup_email"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:ems="10"
            android:hint="@string/fragment_signup_edit_email_hint"
            android:inputType="textPassword"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/fragment_signup_signup_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="95dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="95dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:text="@string/fragment_signup_btn_signup"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>